--- a/statCheck/package.json
+++ b/statCheck/package.json
@@ -12,7 +12,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.1.0"
+    "@tauri-apps/api": "^1.1.0",
+    "svrollbar": "^0.12.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "next",
